Resolves: tdf#97731 allow status bar to adapt to its own preferred size

Change-Id: I4390f61a21eef21371ce7399bf746e60234b8db8
(cherry picked from commit 917d5b8b26a7428f7b7dd495a8db14a3ce16aa55)